Coverity analysis defect 165275: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • Networking & Obs 2025-01-20, Networking & Obs 2025-02-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/executor/task_executor_cursor_test_fixture.h:204: UNINIT 165275 Declaring variable "responseToId" without initializer.
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/executor/task_executor_cursor_test_fixture.h:218: UNINIT 165275 Using uninitialized value "responseToId".

            Assignee:
            Didier Nadeau
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: