SERVER-98773 Initialize responseToId in fixture (#31828)

GitOrigin-RevId: 1b5cd99dc14d3420317164972e24b88b8096d584